--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,16 @@
+2010-01-18  Karl Berry  <karl@gnu.org>
+
+	* lit: import literate sources from CVR.
+	* src/tests: rename top-level temp/ subdir.
+
 2010-01-11  Karl Berry  <karl@tug.org>
 
 	* texmf/tex/generic/tex4ht/frenchb.4ht: patch from
 	daniel.flipo@univ-lille1.fr to improve compatibility
 	with different versions of frenchb.
 
+Copyright 2010 TeX Users Group.
+
+Copying and distribution of this file, with or without modification,
+are permitted in any medium without royalty provided the copyright
+notice and this notice are preserved.
