--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,8 @@
 $Id$
-This file is public domain.  Written originally in 2009 by Karl Berry.
+This file is public domain.  Originally written 2009, Karl Berry.
 
-version 1.1 (17 September 2009):
 - biblatex-related bugs fixed.
 - copyright notices updated.
 - first release by the new maintainers.
+
+(previous releases by Eitan.)
