--- a/lit/tex4ht-cpright.tex
+++ b/lit/tex4ht-cpright.tex
@@ -1,26 +1,18 @@
 \<TeX4ht copyright\><<<
-%                                                        
-% This work may be distributed and/or modified under the 
-% conditions of the LaTeX Project Public License, either 
-% version 1.3c of this license or (at your option) any   
-% later version. The latest version of this license is   
-% in                                                     
-%   http://www.latex-project.org/lppl.txt                
-% and version 1.3c or later is part of all distributions 
-% of LaTeX version 2005/12/01 or later.                  
-%                                                        
-% This work has the LPPL maintenance status "maintained".
-%                                                        
-% This Current Maintainer of this work                   
-% is the TeX4ht Project <tex4ht@tug.org>.                
-%                                                        
-% If you modify this program your changing its signature 
-% with a directive of the following form will be         
-% appreciated.                                           
-%            \message{signature}                         
-%                                                        
-%                                        tex4ht@tug.org  
-%                             http://www.tug.org/tex4ht  
 %
+% This work may be distributed and/or modified under the
+% conditions of the LaTeX Project Public License, either
+% version 1.3c of this license or (at your option) any
+% later version. The latest version of this license is in
+%   http://www.latex-project.org/lppl.txt
+% and version 1.3c or later is part of all distributions
+% of LaTeX version 2005/12/01 or later.
+%
+% This work has the LPPL maintenance status "maintained".
+%
+% The Current Maintainer of this work
+% is the TeX4ht Project <http://tug.org/tex4ht>.
+% 
+% If you modify this program, changing the 
+% version identification would be appreciated.
 >>>
-
