license notices and Makefile rules for tex4ht-xhtmml-xtpipes.tex
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@9 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,8 +9,4 @@
 	daniel.flipo@univ-lille1.fr to improve compatibility
 	with different versions of frenchb.
 
-Copyright 2010 TeX Users Group.
-
-Copying and distribution of this file, with or without modification,
-are permitted in any medium without royalty provided the copyright
-notice and this notice are preserved.
+This file is public domain.  Started 2010, Karl Berry.
