--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,8 @@
+2010-02-05  Karl Berry  <karl@gnu.org>
+
+	* tex4ht-xhtmml-xtpipes.tex: add license notices.
+	* Makefile: add derivations.
+
 2010-02-03  Karl Berry  <karl@gnu.org>
 
 	* wripro.tex: add license notice.
@@ -9,8 +14,4 @@
 	* tex4ht-cpright.tex: minimize lines.
 	* Makefile: start at new file.
 
-Copyright 2010 TeX Users Group.
-
-Copying and distribution of this file, with or without modification,
-are permitted in any medium without royalty provided the copyright
-notice and this notice are preserved.
+This file is public domain.  Started 2010, Karl Berry.
