--- a/lit/tex4ht-xhtmml-xtpipes.tex
+++ b/lit/tex4ht-xhtmml-xtpipes.tex
@@ -1,40 +1,27 @@
+% $Id$
 % htlatex tex4ht-xhtmml-xtpipes "xhtml,next,3" "" "-d./"
+
+% Copyright 1996--2009 Eitan M. Gurari
+% Copyright 2009, 2010 TeX Users Group.
+% Released under LPPL 1.3c+.
+% Please see tex4ht-cpright.tex for license text.
+\message{[<TeX4ht/dist/\jobname>]}
 
 \documentclass{article}
     \Configure{ProTex}{log,<<<>>>,title,list,`,[[]]}
     \usepackage{url}
+    \input{common.tex}
 \begin{document}
-
-
-%%%%%%%%%%%%%%%%%%%%% definitions %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\newcount\tmpcnt  \tmpcnt\time  \divide\tmpcnt  60
-\edef\temp{\the\tmpcnt}
-\multiply\tmpcnt  -60 \advance\tmpcnt  \time
-
-\edef\version{\the\year-\ifnum \month<10 0\fi
-  \the\month-\ifnum \day<10 0\fi\the\day
-   -\ifnum \temp<10 0\fi \temp
-   :\ifnum \tmpcnt<10 0\fi\the\tmpcnt}
-
-\def\CopyYear.#1.{%
-   \ifnum #1=\year #1\space\space\space\space\space\space
-    \else          #1--\the\year\fi
-}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
+\input tex4ht-cpright.tex
 
 
 %%%%%%%%%%%%%%%%%%
-\part{Post Processing for Html Output Mode}
+\part{Post Processing for HTML Output Mode}
 %%%%%%%%%%%%%%%%%%
 
 
 %%%%%%%%%%%%%%%%%%
-\section{Outline}
+\section{Outline} 
 %%%%%%%%%%%%%%%%%%
 
 \AtEndDocument{\OutputCodE\<xhtmml.4xt\>}
@@ -44,6 +31,10 @@
 \<xhtmml.4xt\><<<
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE xtpipes SYSTEM "xtpipes.dtd" >
+<!-- xhtmml.4xt (`version), generated from `jobname.tex
+     Copyright (C) `CopyYear.2008. Eitan M. Gurari
+     Copyright (C) 2009, 2010 TeX Users Group
+`<TeX4ht copyright`> -->
 <xtpipes preamble="yes" signature="xhtmml.4xt (`version)">
    <sax content-handler="xtpipes.util.ScriptsManager" 
         lexical-handler="xtpipes.util.ScriptsManagerLH" >
@@ -58,7 +49,7 @@
 >>>
 
 
-
+% 
 \AtEndDocument{\OutputCodE\<XhtmmlUtilities.java\>}
 
 \Needs{"
@@ -67,10 +58,10 @@
 
 \<XhtmmlUtilities.java\><<<
 package tex4ht;
-`<copy right`>
-/* XHtmmlUtilities.java                      `version */
-/* Copyright (C) `CopyYear.2008.    Eitan M. Gurari            */
-`<cont copy right`>
+/* XhtmmlUtilities.java (`version), generated from `jobname.tex
+   Copyright (C) `CopyYear.2008. Eitan M. Gurari
+   Copyright (C) 2009, 2010 TeX Users Group
+`<TeX4ht copyright`> */
 
 import org.w3c.dom.*;
 public class XhtmmlUtilities {
