derivations for tex4ht-xhtml-xtpipes.tex
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@10 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,12 @@
+2010-02-06  Karl Berry  <karl@gnu.org>
+
+	* tex4ht-xhtml-xtpipes.tex: add license notices.
+	* Makefile: add derivations.
+
+	* tex4ht-xhtmml-xtpipes.tex,
+	* xtpipes.tex: \message when running the lit sources doesn't
+	seem useful.  Remove it.
+
 2010-02-05  Karl Berry  <karl@gnu.org>
 
 	* tex4ht-xhtmml-xtpipes.tex: add license notices.
