tex4ht-unicode notices
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@12 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,8 @@
+2010-02-08  Karl Berry  <karl@gnu.org>
+
+	* tex4ht-unicode.tex: add license notices.
+	* Makefile: add derivations.
+
 2010-02-07  Karl Berry  <karl@gnu.org>
 
 	* tex4ht-word.tex: add license notices.
