tex4ht-tei derivations; new "|TeX4ht copywrite" outputs license notice and \write
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@13 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,10 @@
+2010-02-09  Karl Berry  <karl@gnu.org>
+
+	* tex4t-tei.tex: add license notices.
+	* Makefile: add derivations.
+	* tex4ht-cpright.tex: new macro |TeX4ht copywrite,
+	to output the license notice with a \write to the log file.
+
 2010-02-08  Karl Berry  <karl@gnu.org>
 
 	* tex4ht-unicode.tex: add license notices.
