notices for tex4ht-t4ht.tex
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@14 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,8 @@
+2010-02-10  Karl Berry  <karl@gnu.org>
+
+	* tex4ht-t4ht.tex: add license notices.
+	* Makefile: add derivations.
+
 2010-02-09  Karl Berry  <karl@gnu.org>
 
 	* tex4t-tei.tex: add license notices.
