current copyright line first
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@16 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,7 @@
+2010-02-11  Karl Berry  <karl@gnu.org>
+
+	* Put current copyright line first.
+
 2010-02-10  Karl Berry  <karl@gnu.org>
 
 	* tex4ht-t4ht.tex: add license notices.
