--- a/lit/xtpipes.tex
+++ b/lit/xtpipes.tex
@@ -8,8 +8,8 @@
 % generalize -i attribute to accept multiple directories, like for -classpath
 % gcj support these ``generics''  with a ``-5'' or ``-1.5'' switch
 
-% Copyright 1996--2009 Eitan M. Gurari
-% Copyright 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 1996--2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -257,8 +257,8 @@
 \<Xtpipes.java\><<<
 package xtpipes;
 /* Xtpipes.java (`version), generated from `jobname.tex
-   Copyright (C) `CopyYear.2002. Eitan M. Gurari
    Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
 `<xtpipes imports`>
 `<class XtpipesPrintWriter  `>
@@ -286,7 +286,10 @@ directory because MS Windows get confused between the two.
 
 
 \<xtpipes.java\><<<
-// `version
+/* xtpipes.java (`version), generated from `jobname.tex
+   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) `CopyYear.2002. Eitan M. Gurari
+`<TeX4ht copyright`> */
 import xtpipes.*;
 public class xtpipes {
   public static void main(String [] args) throws Exception {
@@ -882,8 +885,8 @@ if( outPrintWriter == null ){
 \<XtpipesPrintWriter.java\><<<
 package xtpipes;
 /* XtpipesPrintWriter.java (`version), generated from `jobname.tex
-   Copyright (C) `CopyYear.2002. Eitan M. Gurari
    Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
 import java.io.*;
 public class XtpipesPrintWriter extends PrintWriter {
@@ -1214,8 +1217,8 @@ if( Xtpipes.trace ){
 
 \<xtpipes.dtd\><<<
 <!-- xtpipes.dtd (`version), generated from `jobname.tex
-     Copyright (C) `CopyYear.2002. Eitan M. Gurari
      Copyright (C) 2009, 2010 TeX Users Group
+     Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> -->
 <!ELEMENT xtpipes (#PCDATA `<xtpipes entries`>)* >
 <!ATTLIST xtpipes
@@ -1233,8 +1236,8 @@ if( Xtpipes.trace ){
 
 \<xtpipes-map.dtd\><<<
 <!-- xtpipes-map.dtd (`version), generated from `jobname.tex
-     Copyright (C) `CopyYear.2002. Eitan M. Gurari
      Copyright (C) 2009, 2010 TeX Users Group
+     Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> -->
 <!ELEMENT xtpipes-map (when | processing-instruction
                             | select
@@ -2600,8 +2603,8 @@ public InputSource resolveEntity(String publicID, String systemID)
 \<FileInfo.java\><<<
 package xtpipes;
 /* FileInfo.java (`version), generated from `jobname.tex
-   Copyright (C) `CopyYear.2002. Eitan M. Gurari
    Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
 `<FileInfo imports`>
 public class FileInfo{
@@ -2814,8 +2817,8 @@ which the file is scanned directly without trying to build an XML object.
 \<InputObject.java\><<<
 package xtpipes;
 /* InputObject.java (`version), generated from `jobname.tex
-   Copyright (C) `CopyYear.2002. Eitan M. Gurari
    Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
 `<InputObject imports`>
 
@@ -3604,8 +3607,8 @@ The same holds for ascii characters listed within the filter.
 
 \<XtpipesUni.java\><<<
 /* XtpipesUni.java (`version), generated from `jobname.tex
-   Copyright (C) `CopyYear.2002. Eitan M. Gurari
    Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
 package xtpipes;
 public class XtpipesUni{
@@ -3964,8 +3967,8 @@ import java.util.ArrayList;
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE xtpipes PUBLIC "-//GURARI//DTD xtpipes//EN" "xtpipes.dtd"  >
 <!-- xtpipes-default.4xt (`version), generated from `jobname.tex
-     Copyright (C) `CopyYear.2002. Eitan M. Gurari
      Copyright (C) 2009, 2010 TeX Users Group
+     Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> -->
 <xtpipes />
 >>>
@@ -4006,8 +4009,8 @@ import java.util.ArrayList;
 
 \<ScriptsManager.java\><<<
 /* ScriptsManager.java (`version), generated from `jobname.tex
-   Copyright (C) `CopyYear.2002. Eitan M. Gurari
    Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
 package xtpipes.util;
 `<ScriptsManager imports`>
@@ -4336,8 +4339,8 @@ The lexical handler sends its strings to the content hadler.
 
 \<ScriptsManagerLH.java\><<<
 /* ScriptsManagerLH.java (`version), generated from `jobname.tex
-   Copyright (C) `CopyYear.2002. Eitan M. Gurari
    Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
 package xtpipes.util;
 import org.xml.sax.ext.LexicalHandler;
