--- a/lit/tex4ht-unicode.tex
+++ b/lit/tex4ht-unicode.tex
@@ -1,8 +1,8 @@
 % $Id$
 % latex tex4ht-unicode   or   xhlatex tex4ht-unicode "html,3,sections+"
 %
+% Copyright (C) 2009, 2010 TeX Users Group.
 % Copyright (C) 1998--2009 Eitan M. Gurari
-% Copyright 2009, 2010 TeX Users Group.
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
