--- a/lit/wripro.tex
+++ b/lit/wripro.tex
@@ -1,8 +1,8 @@
 % $Id$
 % Used in tex4ht.sty.  Not installed in runtime.
 % 
-% Copyright 1996--2009 Eitan M. Gurari
-% Copyright 2009, 2010 TeX Users Group.
+% Copyright (C)) 2009, 2010 TeX Users Group.
+% Copyright (C) 1996--2009 Eitan M. Gurari
 %
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License, either
