tex4ht-sty.tex: license notices
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@18 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,9 +1,14 @@
+2010-02-12  Karl Berry  <karl@gnu.org>
+
+	* tex4ht-sty.tex: update license notices.
+	* Makefile: add derivations.
+
 2010-02-11  Karl Berry  <karl@gnu.org>
 
 	* tex4ht-svg.tex: update license notices.
 	* Makefile: add derivations.
 
-	* Put current (2010) copyright line first.
+	* All files so far: Put current (2010) copyright line first.
 
 2010-02-10  Karl Berry  <karl@gnu.org>
 
