tex4ht-options: license notices; factor out more common code
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@19 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/tex4ht-unicode.tex
+++ b/lit/tex4ht-unicode.tex
@@ -15,18 +15,8 @@
 \fi
 
 \input{common.tex}
+\input{common-code.tex}
 \input{tex4ht-cpright.tex}
-
-%%%%%%%%%%%%%%%%%% definitions %%%%%%%%%%%%%%%%%%%%%%%%%
-
-\let\AltxModifyShowCode=\ModifyShowCode
-\def\ModifyShowCode{%
-   \def\by{by}\def\={=}\AltxModifyShowCode}
-\let\pReModifyOutputCode=\ModifyOutputCode
-\def\ModifyOutputCode{%
-   \def\by{}\def\={}%
-   \pReModifyOutputCode}
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \Needs{"ls -l tex4ht-*.tex > ls-links.log"}
