tex4ht-moz: license notices
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@23 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,8 @@
+2010-02-17  Karl Berry  <karl@gnu.org>
+
+	* tex4ht-moz.tex: update license notices.
+	* Makefile: add derivations.
+
 2010-02-16  Karl Berry  <karl@gnu.org>
 
 	* tex4ht-oo-xtpipes.tex: update license notices.
