missed copyright inclusion
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@32 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/tex4ht-mathltx.tex
+++ b/lit/tex4ht-mathltx.tex
@@ -396,6 +396,7 @@ display="inline"
 % html-mltx.4ht (|version), generated from |jobname.tex
 % Copyright (C) 2009, 2010 TeX Users Group.
 % Copyright (C) |CopyYear.2005. Eitan M. Gurari
+|<TeX4ht copywrite|>
 >>>
 
 
