changes from CVR to insert notices in generated scripts
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@38 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,8 @@
+2010-03-04  Radhakrishnan CV  <cvr@river-valley.org>
+
+	* tex4ht-mkht.tex (<MYcopyrightnotice): new macro; insert
+	notice in all generated scripts.
+
 2010-03-04  Karl Berry  <karl@gnu.org>
 
 	* tex4ht-htcmd.tex: update license notices.
