--- a/lit/tex4ht-mkht.tex
+++ b/lit/tex4ht-mkht.tex
@@ -59,7 +59,8 @@
 
 
 \<htlatex ...\><<<
-|<unix line|>|<latex|>
+|<unix line|>|<windows line|>
+        |<latex|>
         |<latex|>
         |<latex|>
         |<base|>tex4ht |<dir ch|>|<@|>1  |<III|>
@@ -121,7 +122,7 @@ latex |<@|>5 |<'|>|<definitions|>|<get parameters|>|empty>>>
 
 
 \<htlatex 2e...\><<<
-|<unix line|>|<latex2e|>
+|<unix line|>|<windows line|>|<latex2e|>
         |<latex2e|>
         |<latex2e|>
         |<base|>tex4ht |<dir ch|>|<@|>1  |<III|>
@@ -147,7 +148,7 @@ latex |<@|>5 |<'|>|<definitions2e|>|<get parameters|>|empty>>>
 
 
 \<htlatex 209...\><<<
-|<unix line|>|<latex209|>
+|<unix line|>|<windows line|>|<latex209|>
         |<latex209|>
         |<latex209|>
         |<base|>tex4ht |<dir ch|>|<@|>1  |<III|>
@@ -192,7 +193,7 @@ latex  |<@|>5 |<'|>|<definitions209|>|<get parameters|>|empty>>>
 
 
 \<httex...\><<<
-|<unix line|>|<tex|>
+|<unix line|>|<windows line|>|<tex|>
         |<tex|>
         |<tex|>
         |<base|>tex4ht |<dir ch|>|<@|>1 |<III|>
@@ -240,7 +241,7 @@ The loading of tex4ht takes place at the @rm command at the end of the
 texinfo.tex file.
 
 \<httexi...\><<<
-|<unix line|>|<texinfo|>
+|<unix line|>|<windows line|>|<texinfo|>
         |<texinfo|>
         |<texinfo|>
         |<base|>tex4ht |<dir ch|>|<@|>1 |<III|>
@@ -292,7 +293,8 @@ tex  |<@|>5 |<'|>|<texinfo definitions|>|<get parameters|>|empty>>>
 
 
 \<context...\><<<
-|<unix line|>|<texexec|>
+|<unix line|>|<windows line|>
+        |<texexec|>
         |<base|>tex4ht |<dir ch|>|<@|>1 |<III|>
         |<base|>t4ht |<dir ch|>|<@|>1 |<IV|>
 
@@ -338,7 +340,7 @@ perl /opt/cvr/gurari/main.dir/try.dir/context.dir/context/perltk/texexec.pl%
 
 
 \<htxetex...\><<<
-|<unix line|>|<xetex|>
+|<unix line|>|<windows line|>|<xetex|>
         |<xetex|>
         |<xetex|>
         |<base|>tex4ht -.xdv |<dir ch|>|<@|>1 |<III|>
@@ -369,7 +371,7 @@ xetex -no-pdf |<@|>5 |<'|>|<tex definitions|>|<get parameters|>|empty>>>
 
 
 \<htxelatex...\><<<
-|<unix line|>|<xelatex|>
+|<unix line|>|<windows line|>|<xelatex|>
         |<xelatex|>
         |<xelatex|>
         |<base|>tex4ht -.xdv |<dir ch|>|<@|>1  |<III|>
@@ -404,7 +406,7 @@ xelatex -no-pdf |<@|>5 |<'|>|<definitions|>|<get parameters|>|empty>>>
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \<htmex...\><<<
-|<unix line|>|<mex|>
+|<unix line|>|<windows line|>|<mex|>
         |<mex|>
         |<mex|>
         |<base|>tex4ht |<dir ch|>|<@|>1 |<III|>
@@ -439,7 +441,7 @@ mex |<@|>5 |<'|>|<tex definitions|>|<get parameters|>|empty>>>
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 
 % \<htmex-pl...\><<<
-%         |<unix line|>|<mex-pl|>
+%         |<unix line|>|<windows line|>|<mex-pl|>
 %         |<mex-pl|>
 %         |<mex-pl|>
 %         |<base|>tex4ht |<dir ch|>|<@|>1 |<III|>
@@ -473,7 +475,7 @@ mex |<@|>5 |<'|>|<tex definitions|>|<get parameters|>|empty>>>
 %%%%%%%%%%%%%
 
 
-WARNING: Do't include `-cvalidatehtml' in the htlatex script as it will
+WARNING: Don't include `-cvalidatehtml' in the htlatex script as it will
 be required by every script called with mk4ht.  For instance, `mk4ht
 dblatex file'.
 
@@ -509,7 +511,7 @@ The first line is for `ht ...  ...' scripts.
 
 \<unix scripts\><<<-
 \<ht.unix\><<<
-|<unix line|>$1 $2 
+|<unix line|>|<windows line|>$1 $2 
         $1 $2 
         $1 $2 
         tex4ht $2 
@@ -521,6 +523,7 @@ The first line is for `ht ...  ...' scripts.
 
 \<ms scripts\><<<-
 \<ht.bat\><<<
+|<windows line|>
         %1 %2  
         %1 %2  
         %1 %2  
@@ -988,7 +991,7 @@ against that file.
 % Copyright (C) 2009, 2010 TeX Users Group.
 % Copyright (C) ?CopyYear.1997. Eitan M. Gurari
 ?<TeX4ht copyright?>
-\immediate\write-1{version \ifx \JOBNAME\UnDefined ?version\else |version\fi}
+\immediate\write-1{version ?version}
 
 \def\exit{\documentclass{article}\begin{document}\end{document}\endinput}
 \bgroup
@@ -996,12 +999,14 @@ against that file.
      \immediate\write16{---------------------------- error 
         ---------------------------- 
         ^^JRequires #1ProTex.sty from 
-        http://www.cse.ohio-state.edu/\string
-       ~gurari/systems.html^^J%
+        http://tug.org/tex4ht^^J%
        ---------------------------------------------------------------}}
   \openin15=ProTex.sty \ifeof15 \missing{}\else \closein15 \fi
   \openin15=AlProTex.sty \ifeof15 \missing{Al}\else \closein15 \fi
 \egroup
+
+\let\ScriptFileName\relax
+\let\AddExtn\relax
 
 \documentclass{article}
 
@@ -1016,6 +1021,13 @@ against that file.
   \Configure{ProTex}{foo,<<<>>>,|,title,list,[[]]}
   \begin{document}
 \fi
+
+\catcode`\:=11
+\def\OutputCodE\<#1.#2\>{{\xdef\ScriptFileName{#1}
+   \:DoName\def{#1}{\<#1.#2\>}
+   \OutputCode[#2]\<#1\>}}
+\def\winextn{bat}
+\def\AddExtn{\ifx\ext\winextn .bat\fi}
 
 \tableofcontents
 
@@ -1056,7 +1068,6 @@ against that file.
 \ifx \script\UnDef \let\script=\relax \fi
 \let\base=\relax
 \let\firstln=\relax
-       
 
 \<Rem\><<<
 |Rem>>>
@@ -1087,7 +1098,13 @@ against that file.
 
 \<unix line\><<<
 |firstln#!/bin/sh
-endfirstln        >>>
+endfirstln
+>>>
+
+\<windows line\><<<
+?<MYcopyrightnotice?>
+>>>
+
 
 \def\IfExt#1,#2//{\def\next{#1}%
    \ifx \next\ext \def\next{\csname iftrue\endcsname}%
@@ -1178,7 +1195,7 @@ endfirstln        >>>
       @immediate@write16{| \def\script{bat} }
       @immediate@write16{| % \def\script{unix} }
       @immediate@write16{|}
-      @immediate@write16{| \input mkht.4ht }
+      @immediate@write16{| \input ./mkht.4ht }
       @immediate@write16{|}
       @immediate@write16{| \one{,html,...1...}}
       @immediate@write16{| \two{-ic:/tex4ht/texmf/tex4ht/ht-fonts/#1 ...2...}    % bat }
@@ -1217,12 +1234,12 @@ shebang line, the defaul shell (which can be anything) is used.
 \<mkht-scripts\><<<-
 % mkht-scripts.4ht (?version), generated from ?jobname.tex
 % Copyright (C) 2009, 2010 TeX Users Group.
-% Copyright (C) ?CopyYear.200. Eitan M. Gurari
+% Copyright (C) ?CopyYear.2000. Eitan M. Gurari
 ?<TeX4ht copyright?>
 
 \ifx \JOBNAME\UnDef
    \def\JOBNAME{mkht-scripts.4ht}
-   \def\next{\input mkht.4ht  \endinput}
+   \def\next{\input ./mkht.4ht  \endinput}
    \expandafter\next
 \fi
 
@@ -1237,12 +1254,12 @@ shebang line, the defaul shell (which can be anything) is used.
 \Script{%                        #1 -- file    #2 -- extension
    \Needs{"sed -e 's/\#\# -d/ -d/g' < #1.#2 >  /opt/cvr/gurari/tex4ht.dir/bin/solaris/#1"}%
    \Needs{"chmod 700 /opt/cvr/gurari/tex4ht.dir/bin/solaris/#1"}%
-   \Needs{"mkdir -p  mn.dir/ht-unix"}%
+   \Needs{"mkdir -p mn.dir/ht-unix"}%
    \Needs{"cp #1.#2  mn.dir/ht-unix/#1"}%
 }}{}
 \Script{%                        #1 -- file    #2 -- extension
-   \Needs{"mkdir -p  /opt/cvr/gurari/tex4ht.dir/bin/ht"}%
-   \Needs{"mkdir -p  /opt/cvr/gurari/tex4ht.dir/bin/ht/unix"}%
+   \Needs{"mkdir -p /opt/cvr/gurari/tex4ht.dir/bin/ht"}%
+   \Needs{"mkdir -p /opt/cvr/gurari/tex4ht.dir/bin/ht/unix"}%
    \Needs{"mv #1.#2  /opt/cvr/gurari/tex4ht.dir/bin/ht/unix/#1"}%
    \Needs{"chmod 744 /opt/cvr/gurari/tex4ht.dir/bin/ht/unix/#1"}%
 }
@@ -1254,11 +1271,11 @@ shebang line, the defaul shell (which can be anything) is used.
 %%%%%%%%%%%%%%%%%%
 ?<ms setup?>
 \ifOption{Needs}{\Script{%
-   \Needs{"mkdir -p  mn.dir/ht-win32"}%
+   \Needs{"mkdir -p mn.dir/ht-win32"}%
    \Needs{"cp #1.#2  mn.dir/ht-win32/."}%
 }}{}
 \Script{%                        #1 -- file    #2 -- extension
-   \Needs{"mkdir -p  /opt/cvr/gurari/tex4ht.dir/bin/ht/win32"}%
+   \Needs{"mkdir -p /opt/cvr/gurari/tex4ht.dir/bin/ht/win32"}%
    \Needs{"mv #1.#2  /opt/cvr/gurari/tex4ht.dir/bin/ht/win32/#1.#2"}%
    \Needs{"chmod 744 /opt/cvr/gurari/tex4ht.dir/bin/ht/win32/#1.#2"}%
 }
@@ -1837,16 +1854,37 @@ print "  clean.htlatex     lg tmp\n";
 # and version 1.3 or later is part of all distributions
 # of LaTeX version 2003/12/01 or later.
 #
-# This work has the LPPL maintenance status "maintained"
+# This work has the LPPL maintenance status "maintained".
 #
 # The Current Maintainer of this work
 # is the TeX4ht Project <http://tug.org/tex4ht>.
 #
-# If you modify this file your changing the signature
+# If you modify this file, changing the
 # version identification be appreciated.
 ->>>
 
-
+% used in the generated scripts.
+\<MYcopyrightnotice\><<<-
+|Rem |ScriptFileName|AddExtn (?version), generated from ?jobname.tex
+|Rem Copyright (C) 2009, 2010 TeX Users Group.
+|Rem Copyright (C) ?CopyYear.2003. Eitan M. Gurari
+|Rem
+|Rem This work may be distributed and/or modified under the
+|Rem conditions of the LaTeX Project Public License, either
+|Rem version 1.3 of this license or (at your option) any
+|Rem later version. The latest version of this license is in
+|Rem   http://www.latex-project.org/lppl.txt
+|Rem and version 1.3 or later is part of all distributions
+|Rem of LaTeX version 2003/12/01 or later.
+|Rem
+|Rem This work has the LPPL maintenance status "maintained".
+|Rem
+|Rem The Current Maintainer of this work
+|Rem is the TeX4ht Project <http://tug.org/tex4ht>.
+|Rem
+|Rem If you modify this file, changing the
+|Rem version identification be appreciated.
+->>>
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1864,7 +1902,7 @@ print "  clean.htlatex     lg tmp\n";
 
 
 \immediate\write16{--------------------------------------------------------}
-\immediate\write16{Compile mkht-scripts.4ht with latex to get the 
+\immediate\write16{Compile mkht-scripts.4ht with latex to get the
                                                               full scripts.}
 \immediate\write16{Use the option `Needs' to automatically move the
     files to private directories.}
