--- a/lit/tex4ht-dir.tex
+++ b/lit/tex4ht-dir.tex
@@ -1,2 +1,3 @@
-\def\HOME{/home/4/gurari/tex4ht.dir/}
-\def\DTDS{/home/4/gurari/dtd.dir/}           
+% public domain.
+\def\HOME{./tex4ht.dir/}
+\def\DTDS{./dtd.dir/}           
