--- a/lit/tex4ht-env.tex
+++ b/lit/tex4ht-env.tex
@@ -2,7 +2,7 @@
 %      latex tex4ht-env
 % or htlatex tex4ht-env "xhtml,3"
 %
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) 1997--2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -1926,7 +1926,7 @@ Note: the permission option `S' takes into account also trailing spaces.
 
 \<unix copyright\><<<
 % tex4ht.env-unix or .tex4ht (@version), generated from @jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) @CopyYear.1997. Eitan M. Gurari
 @<TeX4ht copyright@>>>>
 
