--- a/lit/tex4ht-html-speech.tex
+++ b/lit/tex4ht-html-speech.tex
@@ -4,7 +4,7 @@
 % Copy html.4ht into the work directory before each of the 
 %            first two compilations
 %
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) 2006--2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
