--- a/lit/tex4ht-html4.tex
+++ b/lit/tex4ht-html4.tex
@@ -4,7 +4,7 @@
 % Copy html.4ht into the work directory before each of the 
 %            first two compilations
 %
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) 1996--2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -67,7 +67,7 @@
 
 \<html4\><<<
 % html4.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) |CopyYear.1997. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
@@ -75,7 +75,7 @@
 
 \<html4-math\><<<
 % html4-math.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) |CopyYear.1999. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
@@ -6924,7 +6924,7 @@ is reported in Overlib's page).
   \string:RestoreCatcodes\endcsname{\catcode`\%|=\the
   \catcode`\%}\catcode`\%|=14\fi
 % onmouseover.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) |CopyYear.2001. Eitan M. Gurari
 |<TeX4ht copywrite|>
 
@@ -20035,7 +20035,7 @@ The \verb'size="1"' makes the select a popout memnu
 
 \<exerqz\><<<
 % exerqz.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) |CopyYear.1999. Eitan M. Gurari, Donald P. Story
 |<TeX4ht copywrite|>
 |<exerqz's vars|>
