--- a/lit/tex4ht-info-ooffice.tex
+++ b/lit/tex4ht-info-ooffice.tex
@@ -3,7 +3,7 @@
 %             or htlatex tex4ht-info-ooffice "html,sections+"
 %            or ht latex tex4ht-info-ooffice
 %
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) 2005--2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -27,7 +27,7 @@
 
 \<infoof\><<<
 % infoof.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) |CopyYear.2005. Eitan M. Gurari
 |<TeX4ht copywrite|>
 {          \catcode`\@=0 \catcode`\\=11 @relax
