--- a/lit/tex4ht-mkht.tex
+++ b/lit/tex4ht-mkht.tex
@@ -7,7 +7,7 @@
 % (2) perl -c mk4ht.perl
 % (3) xhlatex mkht-scripts.4ht "html,3"
 %
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) 1997--2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -988,7 +988,7 @@ against that file.
 
 \<mkht\><<<-
 % mkht.4ht (?version), generated from ?jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) ?CopyYear.1997. Eitan M. Gurari
 ?<TeX4ht copyright?>
 \immediate\write-1{version ?version}
@@ -1233,7 +1233,7 @@ shebang line, the defaul shell (which can be anything) is used.
 
 \<mkht-scripts\><<<-
 % mkht-scripts.4ht (?version), generated from ?jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) ?CopyYear.2000. Eitan M. Gurari
 ?<TeX4ht copyright?>
 
@@ -1843,7 +1843,7 @@ print "  clean.htlatex     lg tmp\n";
 
 \<perl copyright notice\><<<-
 # mk4ht (?version), generated from ?jobname.tex
-# Copyright (C) 2009, 2010 TeX Users Group.
+# Copyright (C) 2009, 2010 TeX Users Group
 # Copyright (C) ?CopyYear.2003. Eitan M. Gurari
 #
 # This work may be distributed and/or modified under the
@@ -1866,7 +1866,7 @@ print "  clean.htlatex     lg tmp\n";
 % used in the generated scripts.
 \<MYcopyrightnotice\><<<-
 |Rem |ScriptFileName|AddExtn (?version), generated from ?jobname.tex
-|Rem Copyright (C) 2009, 2010 TeX Users Group.
+|Rem Copyright (C) 2009, 2010 TeX Users Group
 |Rem Copyright (C) ?CopyYear.2003. Eitan M. Gurari
 |Rem
 |Rem This work may be distributed and/or modified under the
