--- a/lit/tex4ht-moz.tex
+++ b/lit/tex4ht-moz.tex
@@ -2,7 +2,7 @@
 % compile 3 times: latex tex4ht-moz
 %           or   xhlatex tex4ht-moz "html,3,sections+"
 %
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) 2000--2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -26,7 +26,7 @@
 
 \<mozilla\><<<
 % mozilla.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) |CopyYear.2000. Eitan M. Gurari, Paul Gartside
 % gartside@maths.ox.ac.uk
 |<TeX4ht copywrite|>
