--- a/lit/tex4ht-ooimpress.tex
+++ b/lit/tex4ht-ooimpress.tex
@@ -1,7 +1,7 @@
 % $Id$
 % compile 3 times: latex tex4ht-ooimpress
 %      htlatex tex4ht-ooimpress "xhtml,4,sections+"
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) 2001--2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -95,7 +95,7 @@ tail>>>
 
 \<ooimpress\><<<
 % ooimpress.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) |CopyYear.2001. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
