--- a/lit/common.tex
+++ b/lit/common.tex
@@ -1,7 +1,7 @@
 % $Id$
 % A few common TeX definitions for literate sources.  Not installed in runtime.
 % 
-% Copyright 2009, 2010 TeX Users Group.
+% Copyright 2009, 2010 TeX Users Group
 % Copyright 1996--2009 Eitan M. Gurari
 %
 % This work may be distributed and/or modified under the
