--- a/lit/tex4ht-htcmd.tex
+++ b/lit/tex4ht-htcmd.tex
@@ -2,7 +2,7 @@
 %       tex tex4ht-htcmd
 % or ht tex tex4ht-htcmd
 %
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) 1996--2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
