--- a/lit/tex4ht-javahelp.tex
+++ b/lit/tex4ht-javahelp.tex
@@ -2,7 +2,7 @@
 % compile 3 times: latex tex4ht-javahelp   
 %             or  xhlatex tex4ht-javahelp "html,3,sections+"
 %
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) 2003--2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -843,7 +843,7 @@ zeros before the 1's that represent the current and following 1's.
 
 \<javahelp\><<<
 % javahelp.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) |CopyYear.2003. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
@@ -890,7 +890,7 @@ with the command {\tt htlatex jobname "html,3.2,3,javahelp"}.
 
 \<javahelp-a.4ht\><<<
 % javahelp-a.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) |CopyYear.2003. Eitan M. Gurari
 |<TeX4ht copywrite|>
 \NextFile{\jobname.tmp}
