--- a/lit/tex4ht-oo-xtpipes.tex
+++ b/lit/tex4ht-oo-xtpipes.tex
@@ -1,6 +1,6 @@
 % $Id$
 % htlatex tex4ht-oo-xtpipes "xhtml,next,3" "" "-d./"
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) 2001--2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
