--- a/lit/tex4ht-sty.tex
+++ b/lit/tex4ht-sty.tex
@@ -1,7 +1,7 @@
 % $Id$
 % tex tex4ht-sty   or   ht tex tex4ht-sty
 %
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) 1996--2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
