--- a/lit/tex4ht-tei.tex
+++ b/lit/tex4ht-tei.tex
@@ -2,7 +2,7 @@
 % compile 3 times:     latex   tex4ht-tei   
 %                  or  xhlatex tex4ht-tei "html,3,sections+"
 %
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) 2000--2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
