--- a/lit/tex4ht-xhtmml-xtpipes.tex
+++ b/lit/tex4ht-xhtmml-xtpipes.tex
@@ -1,7 +1,7 @@
 % $Id$
 % htlatex tex4ht-xhtmml-xtpipes "xhtml,next,3" "" "-d./"
 
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) 1996--2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
