--- a/lit/wripro.tex
+++ b/lit/wripro.tex
@@ -1,7 +1,7 @@
 % $Id$
 % Used in tex4ht.sty.  Not installed in runtime.
 % 
-% Copyright (C)) 2009, 2010 TeX Users Group.
+% Copyright (C)) 2009, 2010 TeX Users Group
 % Copyright (C) 1996--2009 Eitan M. Gurari
 %
 % This work may be distributed and/or modified under the
