--- a/lit/xtpipes.tex
+++ b/lit/xtpipes.tex
@@ -8,7 +8,7 @@
 % generalize -i attribute to accept multiple directories, like for -classpath
 % gcj support these ``generics''  with a ``-5'' or ``-1.5'' switch
 
-% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 2009, 2010 TeX Users Group
 % Copyright (C) 1996--2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
