tex4ht-auto-script.tex: unused
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@47 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,7 @@
+2010-03-17  Karl Berry  <karl@gnu.org>
+
+	* tex4ht-auto-script.tex: unused, it seems.
+
 2010-03-12  Karl Berry  <karl@gnu.org>
 
 	* tex4ht-bibtex2.tex: license notices.
